# ros_trex_i2c

./: CMakeLists.txt  package.xml
src/: publisher.py  trex.py
