<?xml version="1.0"?>
<package>
  <name>ros_trex_i2c</name>
  <version>0.1.0</version>
  <description>The trex_i2c package</description>
  <maintainer email="ryan@invalidchecksum.net">Ryan Hass</maintainer>
  <license>Apache-v2</license>
  <!-- <url type="website">http://wiki.ros.org/trex_i2c</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
